--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "zivacare-client",
-  "version": "0.1.0",
+  "version": "0.9.0",
   "description": "An npm module that provides an easy way to make GET/POST requests to the Ziva Care API.",
   "main": "index.js",
   "scripts": {
     "test": "mocha --require babel-core/register"
   },
-  "author": "Stefan Cosma <hello@stefancosma.xyz>",
+  "author": {
+    "name": "Stefan Cosma",
+    "email": "hello@stefancosma.xyz",
+    "url": "https://github.com/stefanbc"
+  },
+  "bugs": {
+    "url": "https://github.com/ZivaCare/zivacare-client/issues"
+  },
+  "homepage": "https://zivacare.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZivaCare/zivacare-client.git"
+  },
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^5.2.0",
     "request": "^2.87.0"
   },
   "babel": {
@@ -23,5 +30,18 @@
   },
   "engines": {
     "node": ">=8.11.3"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^5.2.0"
   }
 }
